setup basic route for a home page, if you can be generous enough to call it that.

--- a/.sqllsrc.json
+++ b/.sqllsrc.json
@@ -3,7 +3,7 @@
     {
       "name": "dailygardenguide",
       "adapter": "sqlite3",
-      "filename": "./dailygardenguide.db",
+      "filename": "/home/emerald/repos/dailygardenguide/garden.db",
       "projectPaths": ["/home/emerald/repos/dailygardenguide"]
     }
   ],
